--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ platform:
 
 before_build:
  
-  - git clone https://github.com/TsioryRasoloarijaona/amortissement_windows_version.git C:\projects\amortissement-windows-version
+  - git clone https://github.com/TsioryRasoloarijaona/amortissement_windows_version.git C:\projects_1\amortissement-windows-version
   - cd C:\projects\amortissement-windows-version
 
  
